Validate walking skeleton build foundation