@@ -1,19 +1,19 @@
 # Walking Skeleton — Build Foundation Validation
 
-**Status:** Not Started
+**Status:** In Progress
 
 | ID | 検証 | 期待結果 | 実結果 | 判断 / メモ |
 |---|---|---|---|---|
-| WS-B01 | Root Reactor / Parent / BOM | Multi-module `verify` 成功 |  |  |
-| WS-B02 | Build JDK | JDK 21で成功 |  |  |
-| WS-B03 | Enforcer negative | JDK 25でMaven実行すると失敗 |  |  |
-| WS-B04 | Java release 21 | class major version 65 |  |  |
-| WS-B05 | Java 25 runtime | Java 21成果物がJava 25で起動 |  |  |
-| WS-B06 | JSpecify / NullAway | 正常コードで成功 |  |  |
-| WS-B07 | NullAway negative | 意図的違反でbuild失敗 |  |  |
-| WS-B08 | NullAway revert | 修正後に再度成功 |  |  |
-| WS-B09 | Maven Wrapper | Wrapper経由で同一build成功 |  |  |
-| WS-B10 | Container | layer extract / JRE / non-rootで起動 |  |  |
+| WS-B01 | Root Reactor / Parent / BOM | Multi-module `verify` 成功 | PASS | BOM → Parent → smoke modulesを含む5 projectで成功 |
+| WS-B02 | Build JDK | JDK 21で成功 | PASS | Temurin 21.0.12、EnforcerとToolchain選択成功 |
+| WS-B03 | Enforcer negative | JDK 25でMaven実行すると失敗 | PASS | Temurin 25.0.4で終了コード1、`RequireJavaVersion`が拒否 |
+| WS-B04 | Java release 21 | class major version 65 | PASS | `GreetingService.class`でmajor version 65 |
+| WS-B05 | Java 25 runtime | Java 21成果物がJava 25で起動 | PASS | Temurin 25.0.4でBoot JAR起動、smoke message出力、終了コード0 |
+| WS-B06 | JSpecify / NullAway | 正常コードで成功 | PASS WITH CHANGE | Error Proneをforked javacで実行して成功 |
+| WS-B07 | NullAway negative | 意図的違反でbuild失敗 | PASS | `return null`を検出し終了コード1、検証後に正常コードへ復元 |
+| WS-B08 | NullAway revert | 修正後に再度成功 | PASS | 正常コード復元後、全5 projectの`clean verify`が終了コード0 |
+| WS-B09 | Maven Wrapper | Wrapper経由で同一build成功 | PASS | Wrapper 3.3.4 / Maven 3.9.16で`clean verify`成功 |
+| WS-B10 | Container | layer extract / JRE / non-rootで起動 | DEFERRED | ローカルにcontainer engineがないため、Docker利用可能環境で再開 |
 
 ## Version Snapshot
 
@@ -32,9 +32,24 @@
 
 ### PASS
 
+- 2026-08-12: JDK 21でRoot Reactor / BOM / Parent / smoke library / smoke applicationの`clean verify`が成功。
+- 2026-08-12: 生成された`GreetingService.class`のmajor versionが65であることを確認。
+- 2026-08-12: 公式Maven Wrapper 3.3.4を`only-script`方式で生成し、Maven 3.9.16で同一buildが成功。
+- 2026-08-12: Maven 3.9.16をTemurin 25.0.4で実行すると、ParentのEnforcer `RequireJavaVersion`が終了コード1でbuildを拒否。smoke modulesはコンパイル前にSKIPされた。
+- 2026-08-12: Temurin 21.0.12で生成したSpring Boot JARをTemurin 25.0.4の`java.exe -jar`で直接起動。`Started SmokeApplication`と`KOIKI Walking Skeleton: hello Spring Boot`を確認し、終了コード0。
+- 2026-08-12: `@NullMarked`配下の`GreetingService.greeting`を一時的に`return null`へ変更。NullAwayが`returning @Nullable expression from method with @NonNull return type`として検出し、終了コード1。検証後に正常コードへ復元。
+- 2026-08-12: 正常コード復元後、Temurin 21.0.12とMaven Wrapper 3.9.16で全5 projectの`clean verify`が再び成功し、終了コード0。NullAwayのPASS → FAIL → PASSを完了。
+
 ### PASS WITH CHANGE
 
+- 初回compileではError ProneがJDK compiler moduleへアクセスできず`IllegalAccessError`となった。
+- `maven-compiler-plugin`へ`<fork>true</fork>`を追加した。既存の`-J--add-exports` / `-J--add-opens`を外部javacへ適用するために必要だった。
+
 ### FAIL
+
+### DEFERRED
+
+- WS-B10は2026-08-12時点のローカル環境にDocker / Podman / nerdctlおよびWSLがないため未実施。Docker利用可能環境でrepositoryを取得し、`walking-skeleton/ws-smoke-app/Dockerfile.ws`から再開する。
 
 ## Phase 1aへ持ち込む設定
 
